tempo fix of experiences full stack card on mobile

--- a/src/sections/Experience/Experience.css
+++ b/src/sections/Experience/Experience.css
@@ -112,7 +112,9 @@
 
 /*   (phones)   */
 @media screen and (max-width: 800px) {
-   
+   .experiece {
+      height: 900px;
+   }
 
    .experience_container {
       display: grid;
